--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "firebase": "^3.6.10",
-    "vue": "^2.2.1"
+    "lodash": "^4.17.4",
+    "vue": "^2.2.1",
+    "vuefire": "^1.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
