--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^3.6.10",
     "lodash": "^4.17.4",
+    "siiimple-toast": "^1.0.9",
     "vue": "^2.2.1",
     "vuefire": "^1.3.1"
   },
