--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.17.4",
     "siiimple-toast": "^1.0.9",
     "vue": "^2.2.1",
-    "vuefire": "^1.3.1"
+    "vuefire": "^1.3.1",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
